# blaze

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.sh  ci.sh  deploy.sh  dev.sh  install.sh  test-scripts.sh  uninstall.sh
examples/: benchmark.rs  git_comparison.rs  integration_test.rs
src/: chunks.rs  cli.rs  config.rs  core.rs  database.rs  errors.rs  files.rs  lib.rs  main.rs  utils.rs
test/: performance_analysis_improved.sh
